<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">MDWechat (官改)</string>
    <string name="text_category_switch">开关</string>
    <string name="text_others">其他</string>
    <string name="key_hook_switch">hookSwitch</string>
    <string name="key_color_primary">key_color_primary</string>
    <string name="key_color_secondary">key_color_secondary</string>
    <string name="key_color_tertiary">key_color_tertiary</string>
    <string name="text_hook_switch">总开关</string>
    <string name="text_settings">设置</string>
    <string name="text_color_primary">主色</string>
    <string name="summary_color_primary">标题栏背景色、悬浮按钮背景色等</string>
    <string name="text_color_secondary">副色1</string>
    <string name="summary_color_secondary">(如果着色)自定义导航当前页图标颜色、悬浮按钮文字颜色、(沉浸主题时)聊天页的一些配色等</string>
    <string name="text_color_tertiary">副色2</string>
    <string name="summary_color_tertiary">(如果着色)自定义导航其他页页图标前景色等</string>
    <string name="text_settings_info">修改之后停止微信重启生效.</string>
    <string name="summary_donate">(微信 / 支付宝) 本软件完全开源，捐赠并不能获得高级功能。</string>
    <string name="key_alipay_red_packet">key_alipay_red_packet</string>
    <string name="text_alipay_red_packet">支付宝领红包</string>
    <string name="summary_alipay_red_packet">每天可领 可用于支付宝捐赠或实体店消费</string>
    <string name="text_donate">向原作者 (Blanke) 捐赠</string>
    <string name="text_donate_joshcai">向我 (JoshCai) 捐赠</string>
    <string name="key_donate">key_donate</string>
    <string name="key_donate_wechat">key_donate_wechat</string>
    <string name="key_donate_joshcai">key_donate_joshcai</string>
    <string name="key_donate_wechat_joshcai">key_donate_wechat_joshcai</string>
    <string name="text_donate_alipay">捐赠(支付宝)</string>
    <string name="text_donate_wechat">捐赠(微信)</string>
    <string name="text_category_settings">设置</string>
    <string name="key_hook_actionbar">key_hook_actionbar</string>
    <string name="text_hook_actionbar">ActionBar变色</string>
    <string name="key_hook_avatar">key_hook_avatar</string>
    <string name="text_hook_avatar">圆角头像</string>
    <string name="key_hide_wechatId">key_hide_wechatId</string>
    <string name="text_hide_wechatId">隐藏微信号(试验)</string>
    <string name="summmary_hide_wechatId">仅本机有效</string>
    <string name="key_hook_ripple">key_hook_ripple</string>
    <string name="text_hook_ripple">按下波纹效果</string>
    <string name="key_hook_float_button">key_hook_float_button</string>
    <string name="text_hook_float_button">悬浮按钮</string>
    <string name="key_hook_search">key_hook_search</string>
    <string name="text_hook_search">搜索</string>
    <string name="key_hide_tab">key_hide_tab</string>
    <string name="text_hide_tab">隐藏导航栏</string>
    <string name="key_hook_tab">key_hook_tab</string>
    <string name="text_hook_tab">TabLayout (自定义导航)</string>
    <string name="summary_hook_tab">替代微信默认导航以便于变更UI.</string>
    <string name="key_hook_menu_game">key_hook_menu_game</string>
    <string name="text_hook_menu_game">隐藏游戏</string>
    <string name="key_hook_menu_shop">key_hook_menu_shop</string>
    <string name="text_hook_menu_shop">隐藏购物</string>
    <string name="key_is_play">key_is_play</string>
    <string name="text_is_play">我是Play版</string>
    <string name="text_info_is_play">Play版需要手动设置,重启生效</string>
    <string name="key_hide_launcher_icon">key_hide_launcher_icon</string>
    <string name="text_hide_launcher_icon">隐藏应用图标</string>
    <string name="text_hide_launcher_icon_info">隐藏后你可以从 Xposed 模块界面进入本模块</string>
    <string name="key_feedback">key_feedback</string>
    <string name="text_feedback">去酷安反馈</string>
    <string name="text_scan_qrcode">扫一扫</string>
    <string name="text_money">收付款</string>
    <string name="text_chat_group">群聊</string>
    <string name="text_friend_add">添加好友</string>
    <string name="text_app_thank">感谢</string>
    <string name="text_app_thank_content">感谢 Blankeer@github 开源的 MDwechat, 感谢 hzknm@coolapk 设计的 Logo, 感谢 Gh0u1L5@github 开源的微信巫师, 感谢 weishu 对代码的贡献, 感谢 chouqibao@github 开源的微信深色主题, 感谢 @装睡 提供的精神支持</string>
    <string name="key_hook_bubble_tint">key_hook_bubble_tint</string>
    <string name="text_hook_bubble_tint">气泡着色</string>
    <string name="text_hook_bubble_tint_info">可以修改气泡颜色，不包括红包气泡</string>
    <string name="text_hook_menu_qrcode">隐藏扫一扫</string>
    <string name="key_hook_menu_qrcode">key_hook_menu_qrcode</string>
    <string name="key_hook_menu_shake">key_hook_menu_shake</string>
    <string name="text_hook_menu_shake">隐藏摇一摇</string>
    <string name="key_hook_menu_near">key_hook_menu_near</string>
    <string name="text_hook_menu_near">隐藏附近的人</string>
    <string name="text_common_settings">通用</string>
    <string name="key_color_ripple">key_color_ripple</string>
    <string name="text_color_ripple">波纹颜色</string>
    <string name="key_main_settings">key_main_settings</string>
    <string name="text_main_settings">主界面</string>
    <string name="text_main_bg_settings">主界面与背景设置</string>
    <string name="text_background_settings">背景设置</string>
    <string name="text_wechat_8_0_0">微信8.0</string>
    <string name="key_settings_page_transparent">key_settings_page_transparent</string>
    <string name="text_settings_page_transparent">第四页透明</string>
    <string name="summary_settings_page_transparent">微信8.0不添加微信状态时请关闭此开关</string>
    <string name="key_hook_actionbar_color">key_hook_actionbar_color</string>
    <string name="text_hook_actionbar_color">顶栏字体颜色修改</string>
    <string name="summary_hook_actionbar_color">将使用副色1。Visual xposed环境下不会生效。</string>
    <string name="key_hook_hide_actionbar">key_hook_hide_actionbar</string>
    <string name="text_hook_hide_actionbar">隐藏Action Bar(顶栏)</string>
    <string name="summary_hook_hide_actionbar">如果打开微信之后看到未隐藏顶栏, 可以先尝试滑动一下界面</string>
    <string name="key_main_text_offset">key_main_text_offset</string>
    <string name="text_main_text_offset">主界面正文高度补正</string>
    <string name="summary_main_text_offset">默认值为0。</string>
    <string name="key_tab_layout_offset">key_tab_layout_offset</string>
    <string name="text_tab_layout_offset">(顶端的)TabLayout 高度设置</string>
    <string name="summary_tab_layout_offset">如果微信首页小程序下滑恢复后出现部分难以消除的深色遮罩，可尝试设置此项为适当的负值......或者隐藏微信顶栏 (主界面->导航)。</string>
    <string name="key_hook_float_button_color_up">key_hook_float_button_color_up</string>
    <string name="text_hook_float_button_color_up">悬浮按钮图标着色</string>
    <string name="key_hook_float_button_color_is_secondary">key_hook_float_button_color_is_secondary</string>
    <string name="text_hook_float_button_color_is_secondary">是否使用副色1作为文字颜色</string>
    <string name="summary_hook_float_button_color_is_secondary">关闭则使用副色2.</string>
    <string name="key_hook_float_button_angle">key_hook_float_button_angle</string>
    <string name="text_hook_float_button_angle">悬浮按钮旋转角度</string>
    <string name="summary_hook_float_button_angle">调整点击悬浮按钮之后主按钮的旋转角度.</string>
    <string name="dialog_title_hook_float_button_angle">范围：-360 ~ 360.</string>
    <string name="key_hook_float_button_move">key_hook_float_button_move</string>
    <string name="text_hook_float_button_move">我想移动悬浮按钮</string>
    <string name="text_hook_float_button_move_info">在某些机型上(魅族等),悬浮按钮,显示异常,可以打开移动选项.</string>
    <string name="text_float_button_color">悬浮按钮文字颜色</string>
    <string name="key_conversation_settings">key_conversation_settings</string>
    <string name="text_conversation_settings">聊天列表页</string>
    <string name="text_chat_settings">聊天界面</string>
    <string name="key_hook_bubble_in_night_mode">key_hook_bubble_in_night_mode</string>
    <string name="text_hook_bubble_in_night_mode">深色模式下启用自定义气泡</string>
    <string name="summary_hook_bubble_in_night_mode">当色系为亮色系且开启深色模式时也启用自定义气泡。依赖于「配色方案 -> 自动切换暗色系」</string>
    <string name="text_hook_bubble_info">必须是.9图</string>
    <string name="key_hook_bubble_tint_left">key_hook_bubble_tint_left</string>
    <string name="text_hook_bubble_tint_left">左边气泡颜色</string>
    <string name="key_hook_bubble_tint_right">key_hook_bubble_tint_right</string>
    <string name="text_hook_bubble_tint_right">右边气泡颜色</string>
    <string name="key_hook_chat_text_color_left">key_hook_chat_text_color_left</string>
    <string name="text_hook_chat_text_color_left">左边文字颜色</string>
    <string name="key_hook_chat_text_color_right">key_hook_chat_text_color_right</string>
    <string name="text_hook_chat_text_color_right">右边文字颜色</string>
    <string name="text_hook_bubble">自定义气泡</string>
    <string name="key_reset_icon_config">key_reset_icon_config</string>
    <string name="text_reset_icon_config">重置图标资源</string>
    <string name="text_reset_icon_config_info">如果你替换图标效果不理想/无效,请重置,目录在 手机存储/mdwechat/icon/目录下,替换图标尽量保证尺寸一致,否则可能显示会有问题</string>
    <string name="key_hook_statusbar_transparent">key_hook_statusbar_transparent</string>
    <string name="text_hook_statusbar_transparent">状态栏全透明</string>
    <string name="key_hook_tab_elevation">key_hook_tab_elevation</string>
    <string name="text_hook_tab_elevation">TabLayout阴影</string>
    <string name="summary_hook_tab_elevation">(试验性) 仅当沉浸主题关闭且TabLayout置于上方时可用</string>
    <string name="key_tab_layout_on_top">key_tab_layout_on_top</string>
    <string name="text_tab_layout_on_top">将TabLayout置于上方</string>
    <string name="key_tab_layout_filtered">key_tab_layout_filtered</string>
    <string name="text_tab_layout_filtered">TabLayout 未激活页 图标着色</string>
    <string name="summary_tab_layout_filtered">若着色则使用副色2.</string>
    <string name="key_feedback_email">key_feedback_email</string>
    <string name="text_feedback_email">给我发邮件反馈</string>
    <string name="text_feedback_email_info">反馈问题请描述问题并提供调试日志,不定时检查回复</string>
    <string name="text_github">Github</string>
    <string name="key_hook_main_textcolor">key_hook_main_textcolor</string>
    <string name="text_hook_main_textcolor">字体颜色</string>
    <string name="key_main_textcolor_title">key_main_textcolor_title</string>
    <string name="text_main_textcolor_title">标题颜色</string>
    <string name="key_main_textcolor_content">key_main_textcolor_content</string>
    <string name="text_main_textcolor_content">内容颜色</string>
    <string name="key_hook_conversation_background_alpha">key_hook_conversation_background_alpha</string>
    <string name="text_hook_conversation_background_alpha">聊天列表页背景不透明度</string>
    <string name="dialog_title_hook_conversation_background_alpha">不透明度范围：0~255</string>
    <string name="summary_hook_conversation_background_alpha">可用于区分置顶与非置顶项（设置非0值时,会在聊天列表页面背景上加一层遮罩）</string>
    <string name="text_settings_debug">调试</string>
    <string name="key_hook_log">key_hook_log</string>
    <string name="text_hook_log">日志记录</string>
    <string name="text_hook_log_info">打开日志开关会在 手机存储/mdwechat/logs 下生成日志文件，谨慎打开，会导致运行变卡顿</string>
    <string name="key_generate_wechat_config">key_generate_view_config</string>
    <string name="text_generate_wechat_config">生成本机微信配置文件</string>
    <string name="text_generate_wechat_config_info">根据当前安装微信版本自动生成适配文件，第一次使用/升级微信版本必须重新生成！！</string>
    <string name="key_download_wechat_config">key_download_wechat_config</string>
    <string name="text_download_wechat_config">下载共享的微信配置文件</string>
    <string name="text_download_wechat_config_info">上面生成失败的可以尝试下载，配置文件作者维护，更新可能不及时，欢迎贡献配置文件(发邮件给作者)</string>
    <string name="text_brief">简要设置</string>
    <string name="text_wechat_config_settings">微信适配文件</string>
    <string name="text_about_settings">更多信息、查看支持版本</string>
    <string name="text_feedback_group">加入交流群</string>
    <string name="text_feedback_group_info">点击查看交流群</string>
    <string name="text_help_float_button">悬浮按钮</string>
    <string name="key_feedback_group">key_feedback_group</string>
    <string name="key_hook_night_mode">key_hook_night_mode</string>
    <string name="text_hook_night_mode">自动切换暗色系</string>
    <string name="summary_hook_night_mode">当微信切换为深色模式时，自动切换 MDWechat 主题为暗色系。\n需要微信7.0.10以上</string>
    <string name="key_color_tip">key_color_tip</string>
    <string name="text_color_tip">消息提示颜色</string>
</resources>